--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <img src="./img/img7.jpg" alt="">
 
           
-            <p>sieu nhan gao</p>
+            <p>Nguyễn Phạm Lam Anh ❤</p>
             <audio id="player" autoplay loop controls="Play">
               <source src="./img/audio.mp3" type="audio/mp3">
             </audio>
